--- a/blogs/backEnd/2020/200611.md
+++ b/blogs/backEnd/2020/200611.md
@@ -1,5 +1,5 @@
 ---
-title: 实践一把KoaJs框架
+title: KoaJs框架--实践
 date: 2020-12-15
 tags:
  - NodeJs
@@ -117,7 +117,160 @@ expiresIn 设置 token 的过期时间。
 
 
 
+##  具体实现
 
+###   Sequelize连接MySQL
+在项目的根目录下创建一个config目录，config目录中创建db.js，该文件主要用来创建mysql的数据库链接的。
 
+```js
+const Sequelize = require('sequelize');
+const sequelize = new Sequelize('dbname','dbusername','password',{
+    host:'localhost',
+    dialect:'mysql',
+    operatorsAliases:false,
+    dialectOptions:{  //字符集 
+        charset:'utf8mb4', collate:'utf8mb4_unicode_ci',
+        supportBigNumbers: true, bigNumberStrings: true
+    },
+    pool:{ max: 5, min: 0, acquire: 30000, idle: 10000 },
+    timezone: '+08:00'  //东八时区
+});
+module.exports = { sequelize };
+```
+
+创建schema、modules、controllers
+
+###   schema--数据表模型实例
+
+建立与数据表的对应关系，用代码建表。
+
+ 在schema目录下的article.js用来创建数据表模型的，也可以理解为创建一张数据表 
+
+```js
+module.exports = function(sequelize,DataTypes){
+    return sequelize.define('article',{
+        id:{ type: DataTypes.INTEGER, primaryKey: true,
+            allowNull: true, autoIncrement: true },
+        //文章标题
+        title:{ type: DataTypes.STRING, allowNull: false, field: 'title' },
+        //作者
+        author:{ type: DataTypes.STRING, allowNull: false, field: 'author' },
+        //内容
+        content:{ type: DataTypes.STRING, allowNull: false, field:'content' },
+        //文章分类
+        category:{ type: DataTypes.STRING, allowNull: false, field: 'category' },
+        // 创建时间
+        createdAt:{ type: DataTypes.DATE },
+        // 更新时间
+        updatedAt:{ type: DataTypes.DATE }
+    },{ freezeTableName: true });
+}
+```
+
+使用mysql工具建表方式
+
+```sql
+DROP TABLE IF EXISTS `article`;
+CREATE TABLE `article` (
+  `id` int(11) NOT NULL AUTO_INCREMENT,
+  `title` varchar(255) NOT NULL,
+  `author` varchar(255) NOT NULL,
+  `content` varchar(255) NOT NULL,
+  `category` varchar(255) NOT NULL,
+  PRIMARY KEY (`id`)
+) ENGINE=InnoDB AUTO_INCREMENT=7 DEFAULT CHARSET=utf8;
+SET FOREIGN_KEY_CHECKS = 1;
+```
+
+###   module--实体模型
+
+在项目中modules目录下创建article.js文件，为文章表，该文件为文章的实例
+
+```js
+// 引入mysql的配置文件
+const db = require('../config/db');
+const Sequelize = require("sequelize");
+// 引入sequelize对象
+const sequelize = db.sequelize;
+// 引入数据表模型
+const Article = require('../schema/article')(sequelize, Sequelize.DataTypes);
+Article.sync({force: false}); //自动创建表
+
+class ArticleModel {
+    static async createArticle(data){
+        return await Article.create({
+            title: data.title, author: data.author,
+            content: data.content, category: data.category
+        });
+    }
+    static async getArticleDetail(id){
+        return await Article.findOne({ where:{ id } });
+    }
+}
+module.exports = ArticleModel;
+```
+
+###  controllers--控制器 
+
+控制器的主要作用为功能的处理，项目中controller目录下创建article.js
+
+```js
+const ArticleModel = require("../modules/article");
+
+class articleController {
+    static async create(ctx){
+        let req = ctx.request.body;  //接收客服端
+        if(req.title && req.author && req.content && req.category){
+            try{ //创建文章模型
+                const ret = await ArticleModel.createArticle(req);
+                //使用刚刚创建的文章ID查询文章详情，且返回文章详情信息
+                const data = await ArticleModel.getArticleDetail(ret.id);
+                ctx.response.status = 200;
+                ctx.body = { code: 200, msg: '创建文章成功', data }
+            }catch(err){
+                ctx.response.status = 412;
+                ctx.body = { code: 412, msg: '创建文章失败', data: err }
+            }
+        }else {
+            ctx.response.status = 416;
+            ctx.body = { code: 200, msg: '参数不齐全' }
+        }
+    }
+    static async detail(ctx){
+        let id = ctx.params.id;
+        if(id){
+            try{   // 查询文章详情模型
+                let data = await ArticleModel.getArticleDetail(id);
+                ctx.response.status = 200;
+                ctx.body = { code: 200,  msg: '查询成功', data }
+            }catch(err){
+                ctx.response.status = 412;
+                ctx.body = { code: 412, msg: '查询失败', data }
+            }
+        }else {
+            ctx.response.status = 416;
+            ctx.body = { code: 416, msg: '文章ID必须传' }
+        }
+    }
+}
+module.exports = articleController;
+```
+
+###    路由 
+
+ 路径，主要是作为请求的url，请求的路径来处理一些请求，返回数据 
+
+```js
+const Router = require('koa-router');
+const ArtileController = require('../controllers/article');
+
+const router = new Router({ prefix: '/api/v1' });
+//创建文章
+router.post('/article/create',ArtileController.create);
+//获取文章详情
+router.get('/article/:id',ArtileController.detail)
+
+module.exports = router
+```
 
 
